syntax = "proto3";
package lumera.audit.v1;

option go_package = "x/audit/v1/types";

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";

import "lumera/audit/v1/audit.proto";
import "lumera/audit/v1/params.proto";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc SubmitAuditReport(MsgSubmitAuditReport) returns (MsgSubmitAuditReportResponse);
}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "lumera/x/audit/v1/MsgUpdateParams";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params params    = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message MsgUpdateParamsResponse {}

message MsgSubmitAuditReport {
  option (cosmos.msg.v1.signer) = "supernode_account";

  string supernode_account = 1 [(cosmos_proto.scalar) = "cosmos.AccAddressString"];
  uint64 window_id         = 2;

  AuditSelfReport self_report = 3 [(gogoproto.nullable) = false];
  repeated AuditPeerObservation peer_observations = 4;
}

message MsgSubmitAuditReportResponse {}
